Replace registry review to check if microphone is used (instead of openCV)